# Fundamentals-of-Image-Processing

./: README.md
First Assignment/: Makefile  OlaQtTerminal.pro
First Assignment/src/: main.cpp  mainwindow.cpp  mainwindow.h
Second Assignment/: Makefile  PhotoINF.pro
Second Assignment/src/: main.cpp  mainwindow.cpp  mainwindow.h
Third Assignment/: CMakeLists.txt  Makefile  PhotoINF.pro  main.cpp  video_cap.cpp  video_cap.h  video_link.txt
Third Assignment/src/: main.cpp  mainwindow.cpp  mainwindow.h
